replace flaky DCHECK in DrawingBuffer with early-out

BUG=648377
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2567733002
Cr-Commit-Position: refs/heads/master@{#437689}

Former-commit-id: 4e3dcfb51d796f4b360216afef4da397aca22728